--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,16 @@ compileJava {
 	sourceCompatibility = targetCompatibility = '1.8'
 }
 
+if (System.getenv('CI_PIPELINE_IID') != null) {
+    version += "-b${System.getenv('CI_PIPELINE_IID')}"
+}
+
 minecraft {
 	version = "1.12.2-14.23.5.2768"
 	runDir = "run"
 
 	mappings = "stable_39"
+	makeObfSourceJar = false
 
 	replace "@VERSION@", project.version
 }
