--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,28 @@
-# eclipse
-bin
+# mac os
+.DS_Store
+
+# forge / gradle
+.gradle
+build/
+out/
+classes/
+run/
+
+# eclipse 
 *.launch
 .settings
-.metadata
 .classpath
 .project
+eclipse
 
-# idea
-out
+.idea/
+*.iml
 *.ipr
 *.iws
-*.iml
-.idea
 
-# gradle
-build
-.gradle
+# vscode
 
-# other
-eclipse
-run
+.settings/
+.vscode/
+bin/
+.classpath
