--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 buildscript {
 	repositories {
-		jcenter()
-		maven { url = "http://files.minecraftforge.net/maven" }
+		mavenCentral()
+		maven { url = "https://maven.minecraftforge.net" }
 	}
 	dependencies {
-		classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+		classpath("com.anatawa12.forge:ForgeGradle:2.3-1.0.+") {
+			changing = true
+		}
 	}
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.2"
+version = "1.12.2-1.3.0"
 group = "ru.ffgs.tfchud"
 archivesBaseName = "TerraFirmaHUD"
 
@@ -18,18 +20,12 @@ compileJava {
 	sourceCompatibility = targetCompatibility = '1.8'
 }
 
-if (System.getenv('CI_PIPELINE_IID') != null) {
-    version += "-b${System.getenv('CI_PIPELINE_IID')}"
-}
-
 minecraft {
 	version = "1.12.2-14.23.5.2768"
 	runDir = "run"
 
 	mappings = "stable_39"
 	makeObfSourceJar = false
-
-	replace "@VERSION@", project.version
 }
 
 processResources {
